# AgenticRAG-VL

./: .env.sample  .gitignore  Dockerfile  GUIDELINE.md  README.md  docker-compose.yml  main.py  pyproject.toml  zensical.toml
data/raw/: README.md
docs/: AGENTS.md  COMPROMISES.md  References.md  getting-started.md  index.md  q2.md  workflow.md
q2/: README.md  q2.ipynb
q2/custom-embedder/: README.md  config_sentence_transformers.json
src/: app.py  config.py  main.py
src/agents/: answerer.py  deep_agent.py  grader.py  planner.py  retriever.py  verifier.py
src/graph/: nodes.py  state.py  workflow.py
src/llm/: client.py
src/loaders/: __init__.py  pdf.py
src/prompts/: rag.md
src/rag/: chunker.py  embedder.py  pipeline.py  retriever.py  vectorstore.py
src/scripts/: ingest.py
